# SplitSound

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  index.html  lib.js  package-lock.json  package.json  server.js  styles.css  work.js
cpp/: NodeAddon.cpp
electron/: main.js  protocol.js
js/: audio.js  dom.js  peer.js  settings.js  signaller.js
